<resources>
    <string name="app_name">elca</string>
    <string name="no_data_title">Veri bulunamadı</string>
    <string name="no_data_text">Elektronik eşya verisi bulunamadı. Lütfen menüden elektronik eşya ekleyerek başlayın.</string>
    <string name="menu_add_item">Eşya Ekle</string>
    <string name="menu_usage_detail">Kullanım Detayı</string>
    <string name="menu_dark_theme_inactive">Karanlık temayı deaktif et</string>
    <string name="menu_dark_theme_active">Karanlık temayı aktifleştir</string>
    <string name="add_item_title">Eşya Adı</string>
    <string name="add_item_title_error_long">Eşya adı çok uzun. Daha kısa bir ad girmeyi deneyin veya kısaltma kullanın.</string>
    <string name="add_item_max_watt">Güç</string>
    <string name="add_item_max_watt_help">Eşyanın kullandığı gücü watt olarak yazın. Eğer bir güç skalası varsa maksimum gücü yazın.o</string>
    <string name="add_item_average_usage">Günlük Ortalama Kullanım (Saat)</string>
    <string name="add_item_average_usage_help">Buzdolabı gibi sürekli çalışan eşyalara 24 değeri girilmelidir.</string>
    <string name="add_item_double_error">Bu değer integer veya double olmalıdır. Örneğin: 3 veya 4.5 gibi</string>
    <string name="add_item_average_usage_max_error">Ortalama kullanım 24 saatten fazla olamaz</string>
    <string name="add_item_has_error">Lütfen hatalı alanları düzeltin</string>
    <string name="add_item_empty_fields">Lütfen boş alanları doldurun</string>
    <string name="add_item_added">Eşya başarı ile eklendi</string>
    <string name="item_delete_alert_title">Emin misiniz?</string>
    <string name="item_delete_alert_message">Eşyayı silmek istediğinizden emin misiniz?</string>
    <string name="item_delete_positive_button_title">Evet</string>
    <string name="item_delete_negative_button_title">Hayır</string>
    <string name="snackbar_action_back">Geri Al</string>
    <string name="detail_lbl_title">Kullanım Bilgileri</string>
    <string name="detail_invoice_price">Beklenen aylık fatura:</string>
    <string name="detail_monthly_usage">Aylık kullanılan toplam güç:</string>
    <string name="detail_daily_usage">Günlük kullanılan toplam güç:</string>
    <string name="detail_weekly_usage">Haftalık kullanılan toplam güç:</string>
    <string name="detail_chart_title">Aylık güç kullanım grafiği</string>
    <string name="detail_chart_legend_title">Elektronik Eşyalar</string>
</resources>